# dank-downloader

./: .gitignore  CMakeLists.txt  Media.py  MediaData.py  MediaPlayer.py  README.md  example.json  gui.py  main.js  main.py  package-lock.json  package.json  requirements.txt  test.py
CMake/modules/: dependencies.cmake
backend/database/: database.py  models.py
backend/downloader/: configuration.py  supported_files.py
backend/gui/: __init__.py  modals.py
database/: database.py  models.py
downloader/: __init__.py  download_progress.py  downloader.py  media_download_info.py  media_downloader.py  media_manager.py  playlist_downloader.py  playlist_manager.py  supported_files.py  util.py
gui/: __init__.py  add_media_to_playlist_window.py  download_window.py  error_window.py  main_window.py  media_layout.py  media_player.py  modals.py  playlist_layout.py  playlist_view.py  playlist_windows.py  progress_window.py
public/: index.html
src/: App.css  App.js  CMakeLists.txt  Media.h  MediaData.h  MediaPlayer.h  index.css  main.cpp
src/components/: ItemRow.css  ItemRow.js  MediaListContainer.css  MediaListContainer.js  MediaTable.js  Modal.css  Modal.js  PlayBar.css  PlayBar.js  PlaylistTable.js  Row.css  Row.js  Table.css  Table.js  index.js
src/components/forms/: Forms.css  MediaDownloadForm.js
